Adds artifact uploading

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,3 @@
-releaseName=Accessible Java GUI
-releaseVersion=1.0b
-releaseURL=http://code.google.com/p/ajui/
+repositoryURL=https://github.com/joeha480/ajui
 repositoryRevision=N/A
+version=1.0.0-SNAPSHOT
