--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,24 @@
 apply plugin: 'java'
 apply plugin: 'maven'
+apply plugin: 'signing'
+//custom plugins
+apply plugin: 'org.dm.bundle'
 
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
 javadoc.options.encoding = 'UTF-8'
-sourceCompatibility = '1.6'
-targetCompatibility = '1.6'
+sourceCompatibility = '1.7'
+targetCompatibility = '1.7'
+
+/*
+The following environment variables needed for artifact publishing:
+
+	TRAVIS_BUILD_ID
+	SONATYPE_PASSWORD
+	SONATYPE_USER
+*/
 
 group = "com.googlecode.ajui"
-version = "$releaseVersion"
 
 sourceSets {
 	main {
@@ -29,28 +39,92 @@ sourceSets {
 	}
 }
 
-jar {
-	doFirst {
-		manifest {
-	    	attributes ('Built-By': System.getProperty("user.name"),
-	    	'Built-On': new Date().format("yyyy-MM-dd"),
-			'Repository-Revision': "$repositoryRevision",
-			'Implementation-Title': "$releaseName",
-			'Implementation-Version': "$releaseVersion",
-			'Implementation-URL': "$releaseURL",
-			)
-		}
-	}
-	from sourceSets.main.allJava
-	baseName = 'ajui'
-}
-
 repositories {
     mavenCentral()
 }
 
 dependencies {
 
+}
+
+buildscript {
+    repositories {
+    	mavenCentral()
+    }
+    dependencies { classpath group: "org.dm.gradle", name: "gradle-bundle-plugin", version: "0.6.4" }
+}
+
+bundle {
+    instructions << [
+		//must use file() to resolve against the build.gradle in Eclipse
+        "-include": file('bnd.bnd'),
+        'Built-By': System.getProperty("user.name"),
+        'Built-On': new Date().format('yyyy-MM-dd'),
+        'Repository-Revision': "$repositoryRevision",
+        'Repository-URL': "$repositoryURL"
+    ]
+}
+
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives javadocJar, sourcesJar
+}
+
+ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
+
+signing {
+    required { isReleaseVersion && gradle.taskGraph.hasTask("uploadArchives") }
+    sign configurations.archives
+}
+
+uploadArchives {
+	//Only upload if a git hash is supplied. On Travis only upload snapshots.
+	enabled = repositoryRevision.size()==40 && (System.getenv("TRAVIS_BUILD_ID")==null || version.endsWith("SNAPSHOT"))
+    repositories {
+        mavenDeployer {
+            if (isReleaseVersion) {
+                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+            }
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: System.getenv("SONATYPE_USER"), password: System.getenv("SONATYPE_PASSWORD"))
+            }
+            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                authentication(userName: System.getenv("SONATYPE_USER"), password: System.getenv("SONATYPE_PASSWORD"))
+            }
+            pom.project {
+                name 'ajui'
+                packaging 'jar'
+                description 'Accessible Java GUI'
+                url 'https://github.com/joeha480/ajui/'
+                scm {
+                    connection 'scm:git:https://github.com/joeha480/ajui.git'
+                    developerConnection 'scm:git:https://github.com/joeha480/ajui.git'
+                    url "$repositoryURL"
+                }
+                licenses {
+                    license {
+                        name 'LGPL'
+                        url 'http://www.gnu.org/licenses/lgpl.html'
+                    }
+                }
+                developers {
+                    developer {
+                        id 'joel'
+                        name 'Joel Håkansson'
+                    }
+                }
+            }
+        }
+    }
 }
 
 task wrapper(type: Wrapper) {
