Removes last use of ant-build

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,11 @@ sourceSets {
 	}
 }
 
+javadoc {
+	options.encoding = 'UTF-8'
+	options.links('http://docs.oracle.com/javase/8/docs/api/')
+}
+
 repositories {
     mavenCentral()
 }
