--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ sourceSets {
 	}
 }
 
+def repoRevision = System.getenv("REPO_REVISION")!=null?System.getenv("REPO_REVISION"):repositoryRevision
+
 javadoc {
 	options.encoding = 'UTF-8'
 	options.links('http://docs.oracle.com/javase/8/docs/api/')
@@ -65,7 +67,7 @@ bundle {
         "-include": file('bnd.bnd'),
         'Built-By': System.getProperty("user.name"),
         'Built-On': new Date().format('yyyy-MM-dd'),
-        'Repository-Revision': "$repositoryRevision",
+        'Repository-Revision': "$repoRevision",
         'Repository-URL': "$repositoryURL"
     ]
 }
@@ -93,7 +95,7 @@ signing {
 
 uploadArchives {
 	//Only upload if a git hash is supplied. On Travis only upload snapshots.
-	enabled = repositoryRevision.size()==40 && (System.getenv("TRAVIS_BUILD_ID")==null || version.endsWith("SNAPSHOT"))
+	enabled = repoRevision.size()==40 && System.getenv("TRAVIS_BUILD_ID")!=null
     repositories {
         mavenDeployer {
             if (isReleaseVersion) {
