--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
+plugins {
+    id 'org.dm.bundle' version '0.10.0'
+}
 apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'signing'
-//custom plugins
-apply plugin: 'org.dm.bundle'
 
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
@@ -52,13 +53,6 @@ repositories {
 
 dependencies {
 
-}
-
-buildscript {
-    repositories {
-    	mavenCentral()
-    }
-    dependencies { classpath group: "org.dm.gradle", name: "gradle-bundle-plugin", version: "0.6.4" }
 }
 
 bundle {
