Removes bnd.bnd

--- a/build.gradle
+++ b/build.gradle
@@ -57,8 +57,12 @@ dependencies {
 
 bundle {
     instructions << [
-		//must use file() to resolve against the build.gradle in Eclipse
-        "-include": file('bnd.bnd'),
+		'-sources': 'true',
+		'Export-Package':  'com.googlecode.ajui,'+
+							'com.googlecode.ajui.event,'+
+							'com.googlecode.ajui.comp',
+		'Private-Package': 'com.googlecode.ajui.l10n',
+		'Service-Component': '*',
         'Built-By': System.getProperty("user.name"),
         'Built-On': new Date().format('yyyy-MM-dd'),
         'Repository-Revision': "$repoRevision",
