--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,20 @@
+// For bnd
+buildscript {
+	repositories {
+		mavenCentral()
+	}
+	dependencies {
+		classpath 'biz.aQute.bnd:biz.aQute.bnd.gradle:3.3.0'
+	}
+}
+
 plugins {
 	id 'java'
 	id 'maven'
 	id 'signing'
-	id 'org.dm.bundle' version '0.10.0'
 }
+
+apply plugin: 'biz.aQute.bnd.builder'
 
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
@@ -55,20 +66,23 @@ dependencies {
 	testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-bundle {
-    instructions << [
-		'-sources': 'true',
-		'Export-Package':  'com.googlecode.ajui,'+
-							'com.googlecode.ajui.event,'+
-							'com.googlecode.ajui.comp',
-		'Private-Package': 'com.googlecode.ajui.l10n',
-		'Service-Component': '*',
-        'Built-By': System.getProperty("user.name"),
-        'Built-On': new Date().format('yyyy-MM-dd'),
-        'Repository-Revision': "$repoRevision",
-        'Repository-URL': "$repositoryURL",
-		'Include-Resource': 'LICENSE, NOTICE'
-    ]
+jar {
+	manifest {
+		attributes(
+			'-sources': 'true',
+			'Export-Package':  'com.googlecode.ajui,'+
+								'com.googlecode.ajui.event,'+
+								'com.googlecode.ajui.comp',
+			'Service-Component': '*',
+			'Bundle-Name': "$moduleName",
+			'Bundle-SymbolicName': "$moduleName",
+			'Built-By': System.getProperty("user.name"),
+			'Built-On': new Date().format('yyyy-MM-dd'),
+			'Repository-Revision': "$repoRevision",
+			'Repository-URL': "$repositoryURL",
+			'Include-Resource': 'LICENSE, NOTICE'
+		)
+	}
 }
 
 task javadocJar(type: Jar) {
